# cmtpp-android

./: README.md  settings.gradle  test.jks
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMT.cpp  native-lib.cpp  native-lib.h
app/src/main/java/com/example/jniobj/: Cmt.java
app/src/main/java/com/example/opencv/: CameraBridgeView.java  FpsMeter.java  OpenCvCameraView.java
app/src/main/java/com/example/testcmt/: CmtActivity.java  MainActivity.java  ScaleImageActivity.java
app/src/main/java/com/example/view/: ScaleViewGroup.java
app/src/main/res/drawable/: rect.xml
app/src/main/res/layout/: activity_cmt.xml  activity_main.xml  activity_scale_image.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/: build.gradle
